# mcp_simple

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  map  motd_text
cmake/: FindEV.cmake
mcp_release/: CMakeLists.txt  base.c  base.h
mcp_release/base/: handshake.c  login.c  status.c
motd/: client.c  motd.c
src/: client.c  client.h  config.h  main.c  net.c  net.h  table.c  table.h
